--- a/OpenAR.xcodeproj/xcshareddata/xcschemes/OpenAR Development.xcscheme
+++ b/OpenAR.xcodeproj/xcshareddata/xcschemes/OpenAR Development.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "C7B10E1D1ABC34560020BFDB"
-               BuildableName = "OpenAR copy.app"
+               BuildableName = "OpenAR Development.app"
                BlueprintName = "OpenAR Development"
                ReferencedContainer = "container:OpenAR.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "C7B10E1D1ABC34560020BFDB"
-            BuildableName = "OpenAR copy.app"
+            BuildableName = "OpenAR Development.app"
             BlueprintName = "OpenAR Development"
             ReferencedContainer = "container:OpenAR.xcodeproj">
          </BuildableReference>
@@ -53,7 +53,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "C7B10E1D1ABC34560020BFDB"
-            BuildableName = "OpenAR copy.app"
+            BuildableName = "OpenAR Development.app"
             BlueprintName = "OpenAR Development"
             ReferencedContainer = "container:OpenAR.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "C7B10E1D1ABC34560020BFDB"
-            BuildableName = "OpenAR copy.app"
+            BuildableName = "OpenAR Development.app"
             BlueprintName = "OpenAR Development"
             ReferencedContainer = "container:OpenAR.xcodeproj">
          </BuildableReference>
