--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,6 @@ DerivedData
 #
 Pods/
 
-Libraries/Vuforia/include/
-Libraries/Vuforia/lib/
+vuforia-license.key
+Libraries/Vuforia*/include/
+Libraries/Vuforia*/lib/
